--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,10 @@ dotenv~=0.9.9
 python-dotenv~=1.1.0
 langchain-community~=0.3.23
 typing_extensions~=4.13.2
-faiss-cpu==1.11.0
 requests~=2.32.3
 typing_extensions~=4.13.2
 pydantic~=2.11.4
 beautifulsoup4
 langchain-text-splitters~=0.3.8
 typing_extensions~=4.13.2
-tavily~=0.1.2
-langchain-tavily~=0.3.2
+langchain-tavily
